--- a/package.json
+++ b/package.json
@@ -74,7 +74,6 @@
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
-    "babel-eslint": "^7.2.1",
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-react-constant-elements": "6.9.1",
     "babel-plugin-transform-react-inline-elements": "6.8.0",
@@ -84,15 +83,7 @@
     "babel-preset-stage-0": "^6.16.0",
     "cheerio": "^0.22.0",
     "css-loader": "0.25.0",
-    "eslint": "3.9.0",
-    "eslint-config-airbnb": "12.0.0",
-    "eslint-config-airbnb-base": "9.0.0",
-    "eslint-import-resolver-webpack": "0.6.0",
-    "eslint-plugin-import": "^1.16.0",
-    "eslint-plugin-jsx-a11y": "2.2.3",
-    "eslint-plugin-react": "6.4.1",
-    "eslint-plugin-redux-saga": "0.1.5",
-    "eventsource-polyfill": "0.9.6",
+    "eventsource-polyfill": "^0.9.6",
     "exports-loader": "0.6.3",
     "file-loader": "0.9.0",
     "html-loader": "0.4.4",
