--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "start:production": "npm run build && npm run start:prod",
     "start:prod": "cross-env NODE_ENV=production node server",
     "dev": "structor -p 2223",
-    "deploy": "git add --all && git commit -m 'save master' && git push origin master && npm run build && bash deploy.sh"
+    "deploy": "npm run build && git add --all && git commit -m 'save master' && git push origin master && bash deploy.sh"
   },
   "babel": {
     "presets": [
