--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "react-router": "3.0.0",
     "react-router-scroll": "0.3.3",
     "redux": "3.6.0",
-    "redux-saga": "0.12.0",
+    "redux-saga": "^0.12.0",
     "reselect": "2.5.4",
     "ruucm-blocks": "https://github.com/ruucm/ruucm-blocks",
     "ruucm-util": "^0.11.0",
