--- a/colored-structor/package.json
+++ b/colored-structor/package.json
@@ -45,7 +45,7 @@
     "inquirer": "2.0.0",
     "json-loader": "^0.5.4",
     "lodash": "^4.16.4",
-    "marked": "0.3.6",
+    "marked": "^0.4.0",
     "minimist": "^1.2.0",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
