--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "start:production": "npm run build && npm run start:prod",
     "start:prod": "cross-env NODE_ENV=production node server",
     "dev": "structor -p 2223",
-    "deploy": "npm run build && git add --all && git commit -m 'save master' && git push origin master && bash deploy.sh",
-    "deploy-2": "gh-pages-deploy -- 'deployed using gh-pages-deploy'"
+    "deploy": "npm run build && git add --all && git commit -a -m ''deployed' && git push origin master && bash deploy.sh",
+    "deploy-2": "npm run build && git add --all && git commit -a -m ''deployed' && git push origin master && gh-pages-deploy -- 'deployed using gh-pages-deploy'"
   },
   "babel": {
     "presets": [
