--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "react-hot-loader": "3.0.0-beta.6",
     "rimraf": "^2.5.4",
     "style-loader": "0.13.1",
+    "surge": "^0.20.1",
     "url-loader": "0.5.7",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
