--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "start:prod": "cross-env NODE_ENV=production node server",
     "dev": "structor -p 2223",
     "deploy-s": "npm run build && surge",
-    "deploy": "npm run build && git add --all && git commit && git push origin master && gh-pages-deploy -- 'deployed using gh-pages-deploy'",
+    "deploy": "npm run build && git add --all && git commit -m 'save master.' && git push origin master && gh-pages-deploy -- 'deployed using gh-pages-deploy'",
     "deploy-w": "npm run build && git add --all && git commit && git push origin master && gh-pages-deploy -- 'deployed using gh-pages-deploy'",
     "deploy-2": "npm run build && git add --all && git commit && git push origin master && gh-pages-deploy -- 'deployed using gh-pages-deploy'"
   },
